[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
description = "Parse OSCAL json schema into Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
convert_case = "0.6.0"
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.9.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
