[package]
name = "oscal_lib"
version = "0.1.1"
edition = "2021"
authors = ["David Skyberg <davidskyberg@gmail.com"]
description = "OSCAL lib in Rust"
keywords = ["rust", "oscal"]
repository = "https://github.com/dskyberg/oscal"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_with = "3.0.0"
thiserror = "1.0.43"
uuid = { version = "1.4.0", features = ["v4", "v5", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
void = "1.0.2"
