[package]
name = "poam"
version = "0.1.0"
edition = "2021"
authors = ["David Skyberg <davidskyberg@gmail.com"]
description = "OSCAL Plan of Action and Milestones in Rust"
keywords = ["rust", "oscal", "poam", "POA&M"]
repository = "https://github.com/dskyberg/oscal"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oscal_lib = { path = "../oscal_lib" }
